add util, alloc heads and use

--- a/NEWTRANS/Makefile
+++ b/NEWTRANS/Makefile
@@ -1,6 +1,6 @@
 OFLAGS  := -O3 -qopenmp
 
-CC      := mpicc
+CC      := /opt/mpich/dev/intel/default/bin/mpicc
 CFLAGS  := $(OFLAGS) -std=c99
 
 FC      := mpifort
@@ -9,15 +9,14 @@ FFLAGS  := $(OFLAGS)
 LD      := $(CC)
 LDFLAGS := $(OFLAGS)
 
+HEADERS = prk-alloc.h prk-util.h
+
 .PHONY: all clean
 
 all: serial.x
 
-%.x: %.o
-	$(LD) $< -o $@
-
-%.o: %.c
-	$(CC) $< -o $@
+%.x: %.c $(HEADERS)
+	$(CC) $(CFLAGS) $< -o $@
 
 clean:
 	-rm -f *.o
