do not mix timers; add asm output; misc

--- a/NEWTRANS/Makefile
+++ b/NEWTRANS/Makefile
@@ -19,7 +19,11 @@ all: serial.x
 %.x: %.c $(HEADERS)
 	$(CC) $(CFLAGS) $< -o $@
 
+%.s: %.c $(HEADERS)
+	$(CC) $(CFLAGS) $< -S -fsource-asm -fverbose-asm -fcode-asm -fasm-blocks -o $@
+
 clean:
+	-rm -f *.s
 	-rm -f *.o
 	-rm -f *.x
 
