--- a/NEWTRANS/Makefile
+++ b/NEWTRANS/Makefile
@@ -1,4 +1,4 @@
-OFLAGS  := -O2 -qopenmp -Wall -xHOST
+OFLAGS  := -O2 -Wall -xHOST
 OFLAGS  := -opt-report=5
 
 CC      := /opt/mpich/dev/intel/default/bin/mpicc
@@ -14,10 +14,13 @@ HEADERS = prk-alloc.h prk-util.h prk-transpose.h
 
 .PHONY: all clean
 
-all: serial.x
+all: serial.x omp1.x
 
-%.x: %.c $(HEADERS)
+serial.x: main.c $(HEADERS)
 	$(CC) $(CFLAGS) $< -o $@
+
+omp1.x: main.c $(HEADERS)
+	$(CC) $(CFLAGS) -qopenmp -DUSE_OPENMP $< -o $@
 
 %.s: %.c $(HEADERS)
 	$(CC) $(CFLAGS) $< -S -fsource-asm -fverbose-asm -fcode-asm -fasm-blocks -o $@
