try FGMPI on Mac w/ Git version since has fixes

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,9 +40,9 @@ matrix:
       env: PRK_TARGET=allupc
            UPC_IMPL=bupc
            GASNET_CONDUIT=smp
-    # Mac issue with thread_t (see https://github.com/humairakamal/fgmpi/pull/1)
-    - os: osx
-      env: PRK_TARGET=allfgmpi
+    ## Mac issue with thread_t (see https://github.com/humairakamal/fgmpi/pull/1)
+    #- os: osx
+    #  env: PRK_TARGET=allfgmpi
     ## Mac issue with libtoolize (see https://github.com/regrant/sandia-shmem/pull/87)
     #- os: osx
     #  env: PRK_TARGET=allshmem
