fix all the compiler issues with C++

--- a/Cxx11/Transpose/Makefile
+++ b/Cxx11/Transpose/Makefile
@@ -12,7 +12,7 @@ CXXFLAGS += -I..
 
 all: $(PROGRAM)
 
-$(PROGRAM): $(PROGRAM).c
+$(PROGRAM): $(PROGRAM).cc
 	$(CXX) $(CXXFLAGS) $< -o $@
 
 run: $(PROGRAM)
